# personal-website

./: pyproject.toml
portfolio/: settings.py  urls.py
templates/: index.html  portfolio-details.html
website/: admin.py  models.py  views.py
website/migrations/: 0001_initial.py  0002_homepagemodel_second_part.py  0003_navbarmodel.py  0004_aboutmodel_statsmodel.py  0005_remove_statsmodel_about.py  0006_aboutmodel_image.py  0007_skillsmodel_alter_aboutmodel_image.py  0008_remove_skillsmodel_percent_skillsmodel_percentage.py  0009_interestmodel.py  0010_testimonialmodel.py
