[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Odilbek99 <umaralievodili@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
psycopg2-binary = "^2.9.5"
flake8 = "^6.0.0"
black = "^22.12.0"
pip = "^22.3.1"
install = "^1.3.5"
django-extensions = "^3.2.1"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
